[project]
name = "fundamentals-of-rag"
version = "0.1.0"
description = "A collection of Retrieval-Augmented Generation (RAG) implementations demonstrating different approaches to semantic search and question-answering over document collections"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.1",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.2",
    "tqdm>=4.67.1",
]
